--- a/area-service/src/main/resources/application.properties
+++ b/area-service/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 #Application related properties
 spring.application.name=area-service
 server.port=8000
+
 circle.radius=4
 rectangle.length=5
-rectangle.bredth=8
+rectangle.breadth=8
 triangle.sidea=5
 triangle.sideb=9
 triangle.sidec=11
 
 #Logging related properties
 logging.file=area-service.log
+
+
