--- a/perimeter-service/src/main/resources/application.properties
+++ b/perimeter-service/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 #Application related properties
 spring.application.name=perimeter-service
 server.port=8100
-circle.radius=4
-rectangle.length=5
-rectangle.bredth=8
-triangle.sidea=5
-triangle.sideb=9
-triangle.sidec=11
 
 #Logging related properties
 logging.file=perimeter-service.log
+
+circle.radius=4
+rectangle.length=5
+rectangle.breadth=8
+triangle.sidea=5
+triangle.sideb=9
+triangle.sidec=11
